2010-07-12  Miklos Szeredi <miklos@szeredi.hu>

	* libfuse: add buffer interface.  Add a generic buffer interface
	for use with I/O.  Buffer vectors are supplied and each buffer in
	the vector may be a memory pointer or a file descriptor.

	* The fuse_reply_fd() interface is converted to using buffers.

2010-06-23  Miklos Szeredi <miklos@szeredi.hu>

	* Make the number of max background requests and congestion
	threshold tunable.  New options are "max_background" and
	"congestion_threshold".  Only effective on linux kernel versions
	2.6.32 or greater.  Patch by Csaba Henk

2010-06-17  Miklos Szeredi <miklos@szeredi.hu>

	* Add fuse_reply_fd() reply function to the low level interface.
	On linux version 2.6.35 or greater this will use splice() to move
	data directly from a file descriptor to the fuse device without
	needing to go though a userspace buffer.  With the
	FUSE_REPLY_FD_MOVE flag the kernel will attempt to move the data
	directly into the filesystem's cache.  On earlier kernels it will
	fall back to an intermediate buffer.  The options
	"no_splice_write" and "no_splice_move" can be used to disable
	splicing and moving respectively.
 
2010-06-15  Miklos Szeredi <miklos@szeredi.hu>

	* Fix out-of-source build.  Patch by Jörg Faschingbauer

	* Add a "nopath" option and flag, indicating that path argument
	need not be calculated for the following operations: read, write,
	flush, release, fsync, readdir, releasedir, fsyncdir, ftruncate,
	fgetattr, lock, ioctl and poll.

2010-05-10  Miklos Szeredi <miklos@szeredi.hu>

	* Remove "chmod root" from install of fusermount.  Reported by
	Lucas C. Villa Real

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Released 2.8.4

2010-04-26  Miklos Szeredi <miklos@szeredi.hu>

	* Fix checking for symlinks in umount from /tmp.  Reported by Al
	Viro

	* Fix umounting if /tmp is a symlink.  Reported by Franco Broi

2010-02-18  Miklos Szeredi <miklos@szeredi.hu>

	* Fix definition of FUSE_OPT_END for C++.  Reported by Tim